# eeg-analysis-with-graphs

./: .gitignore  README.md  grafos-teste.gephi  pyproject.toml
datasets/output/: edges.csv  nodes.csv
src/: find-communities-louvain.py  generate-edges.py  main.py
