[tool.poetry]
name = "trabalho-final-grafos"
version = "0.1.0"
description = ""
authors = ["Guilherme Alvarenga de Azevedo <gui.alvarengas234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mne = "^1.9.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
nx = "^0.0.0"
networkx = "^3.4.2"
python-louvain = "^0.16"
cython = "^3.0.11"
scipy = "^1.15.1"
numpy = "^2.2.2"
tqdm = "^4.67.1"
python-igraph = "^0.11.8"
fa2-modified = "^0.3.10"
leidenalg = "^0.10.2"
pycairo = "^1.27.0"
cdlib = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
